# QQQuestionAI

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md
.claude/: settings.json
.claude/hooks/: deny_dangerous_bash.py  (+1 more)
.github/: dependabot.yml
backend/: env.example  pyproject.toml  requirements.txt
backend/data/: eval_set.json
backend/qqquestion/: __init__.py  cli.py  demo.py  diff_analyzer.py  envfile.py  evaluator.py  explainer.py  hint_gen.py  judge.py  knowledge_base.py  learner_model.py  llm.py  logsetup.py  models.py  question_gen.py  remote_cli.py  server.py  session.py  terminput.py  textutil.py
backend/tests/: conftest.py  test_diff_analyzer.py  test_envfile.py  test_evaluator.py  test_hint_gen.py  test_install_hook.py  test_judge.py  test_knowledge_base.py  test_learner_model.py  test_llm_unavailable.py  test_logsetup.py  test_preparing.py  test_question_gen.py  test_remote_cli.py  test_search_optout.py  test_server.py  test_session.py  test_streaming.py  test_terminput.py  test_textutil_and_explainer.py
docs/: architecture.md  direction.md  web_history.md  working-with-claude-code.md
extension/: .gitignore  .vscodeignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
manji-standard-server-web/: .dockerignore  .gitignore  CONTRACT.md  DESIGN.md  Dockerfile  README.md  docker-compose.yml  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
qtest/: qa_flow.py  qa_stream_flow.py  quiz_e2e.py  test.py
scripts/: install_quiz_hook.sh  verify_safety_net.py
(+40 files in other folders)
