[project]
name = "qqquestion"
version = "0.1.0"
description = "コミット前・コード理解度チェック学習支援AI（QQQuestionAI バックエンド）"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pydantic>=2.7",
    "httpx>=0.27",
]

# `quiz` を主インターフェースにする。git のフラグを乗っ取らず、コミットもしない。
[project.scripts]
quiz = "qqquestion.cli:main"

[project.optional-dependencies]
llm = [
    "langchain-core>=0.2",
    "langchain-google-genai>=1.0",
]
kb = [
    "chromadb>=0.5",
    "ddgs>=6.0",
]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["qqquestion"]
